@@ -1,3 +1,8 @@
+2018-11-15  Mark Wielaard  <mark@klomp.org>
+
+	* eblobjnotetypename.c (ebl_object_note_type_name): Don't update
+	w, t and len unnecessarily.
+
 2018-11-12  Mark Wielaard  <mark@klomp.org>
 
 	* libebl.h (ebl_object_note): Add new argument namesz.
